Updated the header design with fixed positioning, improved logo and navigation styles, and refined button hover effects. Added new CSS variables for themes and optimized selectors for better readability and maintainability, adjusted markup in `index.php` to align with new CSS structure.

--- a/css/style.css
+++ b/css/style.css
@@ -1,71 +1,161 @@
 @import url("./reset.css");
 @import url("./icons.css");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap");
-:root {
-  font-size: 62.5%;
-  --soft-orange: hsl(35, 77%, 62%);
-}
-* {
-  box-sizing: border-box;
-}
-body * {
-  line-height: calc(2px + 2ex + 2px);
-  font-size: 2rem;
+
+:root{
+    font-size: 62.5%;
+    --soft-orange: hsl(35, 77%, 62%);
+    --background-header: #FFF8DC;
+    --buttons-color: #1d3557;
 }
 
-body {
-  background-color: black;
-  max-width: 1600px;
-  margin: 0 auto;
-  header {
-    background-color: lightcoral;
-    padding: 3rem;
-    width: 100%;
-    height: 100%;
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      .nav_links {
-        display: flex;
-        gap: 2rem;
-      }
-    }
-  }
-  main {
-    background-color: aqua;
-    width: 100%;
-    height: 100%;
-    padding: 3rem;
-    section {
-      &:first-of-type {
-        #picture_of_the_month {
-          background-color: blueviolet;
-          width: 100%;
-          height: 100%;
-          img {
-            object-fit: cover;
-            width: 100%;
-          }
+*{
+    box-sizing: border-box;
+}
+
+body *{
+    line-height: calc(2px + 2ex + 2px);
+    font-size: 2rem;
+}
+
+body{
+    background-color: black;
+    max-width: 1600px;
+    margin: 0 auto;
+    
+    header{
+        background-color: var(--background-header);
+        padding: 1rem 5rem;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 100;
+        
+        nav{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            
+            .logo{
+                a img{
+                    width: 50px;
+                    height: 50px;
+                }
+            }
+            
+            .nav_links{
+                display: flex;
+                gap: 2rem;
+                
+                li a{
+                    font-family: 'Inter', sans-serif;
+                    font-size: 1.5rem;
+                    color: #ffffff;
+                    text-decoration: none;
+                    background-color: var(--buttons-color);
+                    padding: 1.2rem 2rem;
+                    border-radius: 4px;
+                    box-shadow: 0 4px 10px rgba(7, 64, 248, 0.87);
+                    transition: all 0.3s ease-in-out;
+                    
+                    &:hover{
+                        background-color: #457b9d;
+                        color: var(--soft-orange);
+                        transform: scale(1.05);
+                        box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
+                    }
+                }
+            }
+            
+            .search{
+                display: flex;
+                gap: 2rem;
+                
+                input{
+                    font-size: 1.5rem;
+                    padding: 0 1rem;
+                    background-color: #1d3557;
+                    color: #ffffff;
+                    border: none;
+                    border-radius: 4px;
+                    box-shadow: 0 2px 10px 2px rgba(7, 64, 248, 0.87);
+                    outline: none;
+                    transition: all 0.3s ease-in-out;
+                    
+                    &:hover, :focus{
+                        background-color: #457b9d;
+                        color: var(--soft-orange);
+                        transform: scale(1.05);
+                    }
+                    
+                    &::placeholder{
+                        color: rgba(255, 255, 255, 0.7);
+                    }
+                }
+                
+                
+            }
+            
+            button{
+                font-size: 1.5rem;
+                color: #ffffff;
+                background-color: #1d3557;
+                padding: 1rem 3rem;
+                border: none;
+                border-radius: 4px;
+                cursor: pointer;
+                box-shadow: 0 2px 10px 2px rgba(7, 64, 248, 0.87);
+                transition: all 0.3s ease-in-out;
+                
+                &:hover{
+                    background-color: #457b9d;
+                    color: var(--soft-orange);
+                    transform: scale(1.05);
+                    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
+                }
+            }
         }
-      }
     }
-
-    #socials {
-      background-color: lightgreen;
-      width: 100%;
-      height: 5vh;
+    
+    main{
+        background-color: aqua;
+        width: 100%;
+        height: 100%;
+        padding: 3rem;
+        
+        section{
+            &:first-of-type{
+                #picture_of_the_month{
+                    background-color: blueviolet;
+                    width: 100%;
+                    height: 100%;
+                    
+                    img{
+                        object-fit: cover;
+                        width: 100%;
+                    }
+                }
+            }
+        }
+        
+        #socials{
+            background-color: lightgreen;
+            width: 100%;
+            height: 5vh;
+        }
+        
+        #grid_planets{
+            background-color: lightgray;
+            width: 100%;
+            height: 40vh;
+        }
     }
-    #grid_planets {
-      background-color: lightgray;
-      width: 100%;
-      height: 40vh;
+    
+    footer{
+        background-color: lightseagreen;
+        width: 100%;
+        height: 100%;
+        padding: 3rem;
     }
-  }
-  footer {
-    background-color: lightseagreen;
-    width: 100%;
-    height: 100%;
-    padding: 3rem;
-  }
 }
